<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_addEditUser">

    <fragment
        android:id="@+id/nav_addEditUser"
        android:name="com.example.Student_classe_PHP.AddEditUserFragment"
        android:label="@string/menu_addEditUser"
        tools:layout="@layout/fragment_addedituser" />

    <fragment
        android:id="@+id/nav_viewUsers"
        android:name="com.example.Student_classe_PHP.ViewUsersFragment"
        android:label="@string/menu_viewUsers"
        tools:layout="@layout/fragment_viewusers" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.Student_classe_PHP.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>

